<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context=".CryptoNotificationActivity">

    <include
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/shape"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/welcomeTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cookie_bold"
            android:gravity="start"
            android:text="@string/krypto_notification_warnung_aktivieren"
            android:textAlignment="textStart"
            android:textColor="@color/textColor"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/shape"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/inputBitcoinPrice"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_currency_dollar"
            android:drawableLeft="@drawable/ic_currency_dollar"
            android:drawablePadding="5dp"
            android:ems="10"
            android:fontFamily="@font/cookie_bold"
            android:hint="@string/krypto_notification_position_hint"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="30dp"
            android:paddingRight="30dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/hintColor"
            android:textCursorDrawable="@drawable/custom_input_cursor" />

        <Button
            android:id="@+id/trackBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/cookie_bold"
            android:onClick="startNewService"
            android:text="@string/willkommen_warnung_bearbeiten"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <Button
            android:id="@+id/endTrackBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/cookie_bold"
            android:onClick="stopNewService"
            android:text="@string/krypto_notification_tracken_beenden"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:visibility="visible" />
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>