<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <include
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/shape"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/settingsPriceItemHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/cookie_bold"
            android:gravity="center_horizontal"
            android:text="@string/einstellungen_preiseingabe_titel"
            android:textColor="@color/textColor"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/settingsPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:fontFamily="sans-serif"
                android:text="@string/einstellungen_preiseingabe_beschreibung"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:visibility="visible" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/settingsPriceSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/einstellungen_price_options" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/shape"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/settingsMusicItemHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/cookie_bold"
            android:gravity="center_horizontal"
            android:text="@string/einstellungen_musik_titel"
            android:textColor="@color/textColor"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/settingsMusicLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:fontFamily="sans-serif"
                android:text="@string/einstellungen_musik_beschreibung"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:visibility="visible" />

            <CheckBox
                android:id="@+id/isMutingCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:defaultFocusHighlightEnabled="false"
                android:fontFamily="sans-serif"
                app:buttonTint="@color/orange_200"
                android:layout_gravity="center"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/settingsVolumeImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_volume_up"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/saveChangesBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_button"
        android:enabled="false"
        android:fontFamily="@font/cookie_bold"
        android:onClick="saveChanges"
        android:text="@string/einstellungen_uebernehmen_button"
        android:textColor="@color/white"
        android:textSize="20dp" />
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>